ns1.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: ns1
  labels:
    app: nginx1
spec: {}
status: {}
