ns2.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: ns2
  labels:
    app: nginx2
spec: {}
status: {}
