sns2.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: sns2
  name: sns2
  namespace: ns2
spec:
  ports:
  - name: "80"
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx2
  type: ClusterIP
status:
  loadBalancer: {}
