networkpolicy-allow80.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-80
  namespace: ns2
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels: 
            app: nginx1
      ports:
       - protocol: TCP
         port: 80
