networkpolicy-denyall.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: ns2
spec:
  podSelector: {}
  policyTypes:
    - Ingress
